<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GitRecipes</string>
    <string name="btn_entrar">Entrar</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_inicio">inicio</string>
    <string name="search_recipe">Buscar Recetas</string>
    <string name="title_activity_crear_receta">crear_receta</string>
    <string name="titulo_receta">Insertar titulo</string>
    <string name="texto_receta">Insertar descripcion</string>
    <string name="title_activity_main_drawer">main_drawer</string>
    <string-array name="menues">
        <item name="item_uno">Crear Receta</item>
        <item name="item_dos">Mis Recetas</item>
        <item name="item_tres">Mi Perfil</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="crearla">Crear la receta</string>
    <string name="ingredientes">Inserte el ingrediente</string>
    <string name="cant_ing">Cantidad numerica</string>
    <string name="ing_btn">Crear ingrediente</string>
    <string name="pasos">Inserte aqui los pasos</string>
    <string name="pasos_btn">Crear paso</string>
    <string-array name="options">
        <item name="item_uno">Camara</item>
        <item name="item_dos">Galeria</item>
    </string-array>


</resources>
